src/metrics/snapshots/big_code_analysis__metrics__npm__tests__go_empty_unit_no_methods.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 0,
  "interfaces": 0,
  "class_methods": 0,
  "interface_methods": 0,
  "class_coa": 0.0,
  "interface_coa": 0.0,
  "total": 0,
  "total_methods": 0,
  "coa": 0.0
}
