src/metrics/snapshots/big_code_analysis__metrics__npm__tests__go_methods_on_different_receivers_aggregate_at_unit.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 3.0,
  "interfaces": 0.0,
  "class_methods": 3.0,
  "interface_methods": 0.0,
  "classes_average": 1.0,
  "interfaces_average": null,
  "total": 3.0,
  "total_methods": 3.0,
  "average": 1.0
}
