src/metrics/snapshots/big_code_analysis__metrics__npm__tests__go_npm_excludes_unexported.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 2.0,
  "interfaces": 0.0,
  "class_methods": 3.0,
  "interface_methods": 0.0,
  "class_coa": 0.6666666666666666,
  "interface_coa": 0.0,
  "total": 2.0,
  "total_methods": 3.0,
  "coa": 0.6666666666666666
}
