src/metrics/snapshots/big_code_analysis__metrics__npm__tests__kotlin_class_in_interface.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 1.0,
  "interfaces": 1.0,
  "class_methods": 1.0,
  "interface_methods": 1.0,
  "class_coa": 1.0,
  "interface_coa": 1.0,
  "total": 2.0,
  "total_methods": 2.0,
  "coa": 1.0
}
