src/metrics/snapshots/big_code_analysis__metrics__npm__tests__kotlin_interface_in_class.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 1,
  "interfaces": 1,
  "class_methods": 1,
  "interface_methods": 1,
  "class_coa": 1.0,
  "interface_coa": 1.0,
  "total": 2,
  "total_methods": 2,
  "coa": 1.0
}
