src/metrics/snapshots/big_code_analysis__metrics__npm__tests__kotlin_interface_with_default_method.snap
---
source: src/metrics/npm.rs
expression: metric.npm
---
{
  "classes": 0.0,
  "interfaces": 2.0,
  "class_methods": 0.0,
  "interface_methods": 2.0,
  "classes_average": 0.0,
  "interfaces_average": 1.0,
  "total": 2.0,
  "total_methods": 2.0,
  "average": 1.0
}
